--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -138,7 +138,7 @@ hr.small {
   }
 }
 .intro-header {
-  background: center;
+  background: no-repeat center center;
   background-color: #808080;
   background-attachment: scroll;
   -webkit-background-size: cover;
