--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -139,7 +139,7 @@ hr.small {
 }
 .intro-header {
   background: no-repeat center center;
-  background-color: #808080;
+  background-color: #6D507F;
   background-attachment: scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
