--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -151,7 +151,7 @@ hr.small {
 .intro-header .post-heading,
 .intro-header .page-heading {
   padding: 100px 0 50px;
-  color: white;
+  color: #835352;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading,
@@ -199,7 +199,6 @@ hr.small {
   font-weight: 600;
 }
 .intro-header .post-heading .meta {
-  text-shadow: 2px 2px 4px #000000;
   font-family: 'Lora', 'Times New Roman', serif;
   font-style: italic;
   font-weight: 300;
