--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -152,7 +152,7 @@ hr.small {
 .intro-header .page-heading {
   padding: 100px 0 50px;
   color: white;
-  text-shadow: 1px 1px 4px #9F6B52;
+  text-shadow: 2px 2px 2px #000000;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading,
