--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -152,6 +152,7 @@ hr.small {
 .intro-header .page-heading {
   padding: 100px 0 50px;
   color: white;
+  text-shadow:2px 2px 4px #5F5852;
 }
 
 @media only screen and (min-width: 768px) {
