--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -49,6 +49,7 @@ hr.small {
   margin: 15px auto;
   border-width: 4px;
   border-color: white;
+  text-shadow: 2px 2px 4px #5F5852;
 }
 .navbar-custom {
   background: white;
