--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -34,7 +34,7 @@ a {
 }
 a:hover,
 a:focus {
-  color: #0085a1;
+  color: #514A3F;
 }
 a img:hover,
 a img:focus {
@@ -140,7 +140,7 @@ hr.small {
 }
 .intro-header {
   background: no-repeat center center;
-  background-color: #6D507F;
+  background-color: #514A3F;
   background-attachment: scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
