--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -120,14 +120,14 @@ hr.small {
   }
   .navbar-custom.is-fixed .navbar-brand:hover,
   .navbar-custom.is-fixed .navbar-brand:focus {
-    color: #0085a1;
+    color: #7A7163;
   }
   .navbar-custom.is-fixed .nav li a {
     color: #404040;
   }
   .navbar-custom.is-fixed .nav li a:hover,
   .navbar-custom.is-fixed .nav li a:focus {
-    color: #0085a1;
+    color: #7A7163;
   }
   .navbar-custom.is-visible {
     /* if the user changes the scrolling direction, we show the header */
