--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -80,7 +80,7 @@ hr.small {
   }
   .navbar-custom .navbar-brand:hover,
   .navbar-custom .navbar-brand:focus {
-    color: #EBDCB5;
+    color: #706655;
   }
   .navbar-custom .nav li a {
     color: white;
@@ -88,7 +88,7 @@ hr.small {
   }
   .navbar-custom .nav li a:hover,
   .navbar-custom .nav li a:focus {
-    color: #EBDCB5;
+    color: #706655;
   }
 }
 @media only screen and (min-width: 1170px) {
